辛口チェック完了: HTML構造修正とクラス重複解決
- HTMLタグ構造エラー修正（モバイルナビゲーションの不正なli入れ子）
- final-critical-features.js重複読み込み削除
- dedupe-restoration-classes.js追加（クラス重複解決）
- 全スクリプトを</body>前に正しく配置
- members.html, profile.html, messages.html, events.html, connections.htmlの構造修正

--- a/connections.html
+++ b/connections.html
@@ -303,6 +303,10 @@
     <!-- responsive-menu-simple.jsを削除してsidebar-toggle.jsのみ使用 -->
     <script src="js/sidebar-toggle.js"></script>
     <script src="js/connections-manager-simple.js?v=2024121707"></script>
+    <!-- データベーステーブル解決ユーティリティ -->
+    <script src="js/database-table-resolver.js"></script>
+    <!-- matchingsテーブル活用アダプター -->
+    <script src="js/matching-table-adapter.js"></script>
     <!-- マッチング初期化修正 -->
     <script src="js/matching-init-fix.js"></script>
     <!-- マッチング完全修正版（削除されたコードを復活） -->
@@ -310,5 +314,14 @@
     <!-- プロフィールモーダル機能 -->
     <script src="js/members-profile-modal.js"></script>
     <script src="js/user-dropdown-handler.js"></script>
+<!-- 重要機能復活スクリプト -->
+<script src="js/critical-features-restoration.js"></script>
+<!-- 追加重要機能復活スクリプト -->
+<script src="js/additional-critical-features.js"></script>
+<!-- 見逃していた重要機能 -->
+<script src="js/missing-critical-features.js"></script>
+<!-- 最終必須機能（辛口チェック完全版） -->
+<script src="js/final-critical-features.js"></script>
+<script src="js/dedupe-restoration-classes.js"></script>
 </body>
 </html>
