--- a/matching.html
+++ b/matching.html
@@ -354,6 +354,10 @@
     <script src="js/matching-init-fix.js"></script>
     <!-- マッチング完全修正版（削除されたコードを復活） -->
     <script src="js/matching-complete-fix.js"></script>
+    <!-- matchingsテーブル活用アダプター -->
+    <script src="js/matching-table-adapter.js"></script>
+    <!-- データベーステーブル解決ユーティリティ -->
+    <script src="js/database-table-resolver.js"></script>
     
     <!-- グローバル閲覧履歴 -->
     <script src="js/global-viewing-history.js"></script>
@@ -366,5 +370,14 @@
     <script src="js/user-dropdown-handler.js"></script>
     <!-- アバターサイズ強制適用 -->
     <script src="js/avatar-size-enforcer.js"></script>
+<!-- 重要機能復活スクリプト -->
+<script src="js/critical-features-restoration.js"></script>
+<!-- 追加重要機能復活スクリプト -->
+<script src="js/additional-critical-features.js"></script>
+<!-- 見逃していた重要機能 -->
+<script src="js/missing-critical-features.js"></script>
+<!-- 最終必須機能（辛口チェック完全版） -->
+<script src="js/final-critical-features.js"></script>
+<script src="js/dedupe-restoration-classes.js"></script>
 </body>
 </html>
