--- a/dashboard.html
+++ b/dashboard.html
@@ -548,5 +548,14 @@
     </script>
     <!-- アバターサイズ強制適用 -->
     <script src="js/avatar-size-enforcer.js"></script>
+<!-- 重要機能復活スクリプト -->
+<script src="js/critical-features-restoration.js"></script>
+<!-- 追加重要機能復活スクリプト -->
+<script src="js/additional-critical-features.js"></script>
+<!-- 見逃していた重要機能 -->
+<script src="js/missing-critical-features.js"></script>
+<!-- 最終必須機能（辛口チェック完全版） -->
+<script src="js/final-critical-features.js"></script>
+<script src="js/dedupe-restoration-classes.js"></script>
 </body>
 </html>
