--- a/members.html
+++ b/members.html
@@ -215,18 +215,6 @@
                             <a href="dashboard.html">ダッシュボード</a>
                             <i class="fas fa-chevron-right"></i>
                             <span>メンバー</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="connections.html" class="mobile-nav-link">
-                            <i class="fas fa-link"></i>
-                            <span>コネクション</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="connections.html" class="sidebar-link">
-                            <i class="fas fa-link"></i>
-                            <span>コネクション</span>
                         </nav>
                     </div>
                 </div>
@@ -456,5 +444,14 @@
     <script src="js/advanced-search.js"></script>
     <!-- アバターサイズ強制適用 -->
     <script src="js/avatar-size-enforcer.js"></script>
+<!-- 重要機能復活スクリプト -->
+<script src="js/critical-features-restoration.js"></script>
+<!-- 追加重要機能復活スクリプト -->
+<script src="js/additional-critical-features.js"></script>
+<!-- 見逃していた重要機能 -->
+<script src="js/missing-critical-features.js"></script>
+<!-- 最終必須機能（辛口チェック完全版） -->
+<script src="js/final-critical-features.js"></script>
+<script src="js/dedupe-restoration-classes.js"></script>
 </body>
 </html>
