--- a/messages.html
+++ b/messages.html
@@ -67,9 +67,7 @@
                     </a>
                 </li>
                 <li>
-                    <li>
-                    <li>
-                        <a href="connections.html" class="sidebar-link">
+                    <a href="connections.html" class="mobile-nav-link">
                             <i class="fas fa-link"></i>
                             <span>コネクション</span>
                     </a>
@@ -334,5 +332,14 @@
     <script src="js/user-dropdown-handler.js"></script>
     <!-- アバターサイズ強制適用 -->
     <script src="js/avatar-size-enforcer.js"></script>
+<!-- 重要機能復活スクリプト -->
+<script src="js/critical-features-restoration.js"></script>
+<!-- 追加重要機能復活スクリプト -->
+<script src="js/additional-critical-features.js"></script>
+<!-- 見逃していた重要機能 -->
+<script src="js/missing-critical-features.js"></script>
+<!-- 最終必須機能（辛口チェック完全版） -->
+<script src="js/final-critical-features.js"></script>
+<script src="js/dedupe-restoration-classes.js"></script>
 </body>
 </html>
