--- a/matching.html
+++ b/matching.html
@@ -378,6 +378,8 @@
 <script src="js/missing-critical-features.js"></script>
 <!-- 最終必須機能（辛口チェック完全版） -->
 <script src="js/final-critical-features.js"></script>
+<!-- マッチング・コネクション不足機能 -->
+<script src="js/matching-connections-missing-features.js"></script>
 <script src="js/dedupe-restoration-classes.js"></script>
 </body>
 </html>
