競合を避けて最小限の必須機能のみ追加
余計な機能を削除し、本当に必要な部分だけに絞り込み:
- loadMatchingCandidatesのフォールバック（既存関数がない場合のみ）
- コネクション数の表示更新（既存処理がない場合のみ）
- マッチングスコア表示修正（NaNの場合のみ）
- エラー時のフォールバック処理

削除:
- matching-connections-missing-features.js（余計な機能が多すぎた）

競合回避のため、既存の関数を上書きせず、存在しない場合のみ追加

--- a/matching.html
+++ b/matching.html
@@ -378,8 +378,8 @@
 <script src="js/missing-critical-features.js"></script>
 <!-- 最終必須機能（辛口チェック完全版） -->
 <script src="js/final-critical-features.js"></script>
-<!-- マッチング・コネクション不足機能 -->
-<script src="js/matching-connections-missing-features.js"></script>
+<!-- マッチング必須機能のみ（競合回避） -->
+<script src="js/matching-connections-essential-only.js"></script>
 <script src="js/dedupe-restoration-classes.js"></script>
 </body>
 </html>
