念には念を入れた最終チェック完了
全ページを丁寧に確認し、最小限の必須修正を追加:

追加した修正:
- Eventsのdateフィールド→start_date自動変換
- Dashboard Statsエラー時のフォールバック
- Null/Undefinedエラー防止のsafeGet関数
- プロファイル画像のフォールバック処理
- 日付フォーマットの統一処理

確認済み:
- 全HTMLページの関数呼び出しを確認
- 必要な関数がすべて定義されていることを確認
- 余計な競合を起こす可能性のあるコードは追加しない
- 既存の実装を尊重し、存在しない場合のみフォールバック提供

--- a/events.html
+++ b/events.html
@@ -411,6 +411,7 @@
 <script src="js/missing-critical-features.js"></script>
 <!-- 最終必須機能（辛口チェック完全版） -->
 <script src="js/final-critical-features.js"></script>
+<script src="js/final-essential-fixes.js"></script>
 <script src="js/dedupe-restoration-classes.js"></script>
 </body>
 </html>
