--- a/referral.html
+++ b/referral.html
@@ -542,5 +542,6 @@ AIを活用した次世代のビジネスマッチングサービスで、経営
     <script src="js/share-modal-handler.js"></script>
     <!-- アバターサイズ強制適用 -->
     <script src="js/avatar-size-enforcer.js"></script>
+<script src="js/final-essential-fixes.js"></script>
 </body>
 </html>
