--- a/connections.html
+++ b/connections.html
@@ -324,6 +324,7 @@
 <script src="js/final-critical-features.js"></script>
 <!-- コネクション必須機能のみ（競合回避） -->
 <script src="js/matching-connections-essential-only.js"></script>
+<script src="js/final-essential-fixes.js"></script>
 <script src="js/dedupe-restoration-classes.js"></script>
 </body>
 </html>
