--- a/matching.html
+++ b/matching.html
@@ -380,6 +380,7 @@
 <script src="js/final-critical-features.js"></script>
 <!-- マッチング必須機能のみ（競合回避） -->
 <script src="js/matching-connections-essential-only.js"></script>
+<script src="js/final-essential-fixes.js"></script>
 <script src="js/dedupe-restoration-classes.js"></script>
 </body>
 </html>
