--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
     <!-- Video Preload Optimization -->
-    <!-- Video preloadは一部ブラウザで未サポートのため無効化 -->
-    <!-- <link rel="preload" href="assets/interconnect-top.mp4" as="video" type="video/mp4" crossorigin="anonymous"> -->
-    <link rel="prefetch" href="assets/interconnect-top.mp4" as="video" type="video/mp4">
+    <!-- 動画のプリロードは削除（サイズが大きすぎるため） -->
     <link rel="dns-prefetch" href="assets/">
     
     <!-- Styles -->
@@ -106,7 +104,7 @@
                    muted 
                    loop 
                    playsinline 
-                   preload="none"
+                   preload="metadata"
                    poster="assets/video-poster.svg">
                 <source src="assets/interconnect-top.mp4" type="video/mp4">
                 お使いのブラウザは動画をサポートしていません。
