修正: マッチングページのプロフィールボタンポップアップ表示
- profile-detail-modal.jsでview-profile-btnクラスも監視対象に追加
- matching-unified.jsのshowUserProfile関数を非同期処理に修正
- profile-modal-priority.jsを新規作成してイベント優先順位を制御
- プロフィールボタンクリック時にポップアップが正しく表示されるよう修正

問題: マッチングページのプロフィールボタンがprofile.htmlへリダイレクトしていた
解決: イベントリスナーの競合を解消し、ProfileDetailModalが優先的に処理されるよう調整

--- a/matching.html
+++ b/matching.html
@@ -366,6 +366,8 @@
     
     <!-- プロファイル詳細モーダル（必須） -->
     <script src="js/profile-detail-modal.js"></script>
+    <!-- プロフィールモーダル優先制御 -->
+    <script src="js/profile-modal-priority.js"></script>
     <!-- ユーザードロップダウンハンドラー -->
     <script src="js/user-dropdown-handler.js"></script>
     <!-- アバターサイズ強制適用 -->
