追加機能復元: マッチングページの削除された機能を復活
復元機能:
1. フィルターリセット機能（matching-filter-reset.js）
   - フィルターを一括リセットするボタン
   - アクティブフィルターの可視化
   - 個別フィルター削除機能
   - LocalStorage永続化対応

2. リアルタイム更新機能（matching-realtime-updates.js）
   - 新規ユーザー登録時の通知
   - プロファイル更新のリアルタイム反映
   - NEWバッジ表示
   - アニメーション付き更新

削除されたファイルから必要な機能のみをサルベージして既存システムに統合

--- a/matching.html
+++ b/matching.html
@@ -368,6 +368,10 @@
     <script src="js/profile-detail-modal.js"></script>
     <!-- プロフィールモーダル優先制御 -->
     <script src="js/profile-modal-priority.js"></script>
+    <!-- フィルターリセット機能 -->
+    <script src="js/matching-filter-reset.js"></script>
+    <!-- リアルタイム更新機能 -->
+    <script src="js/matching-realtime-updates.js"></script>
     <!-- ユーザードロップダウンハンドラー -->
     <script src="js/user-dropdown-handler.js"></script>
     <!-- アバターサイズ強制適用 -->
