パフォーマンス最適化: マッチングページの表示速度向上
追加機能:
1. 画像の遅延読み込み（IntersectionObserver）
2. レーダーチャートの遅延描画
3. 検索入力のデバウンス処理（300ms）
4. フィルター変更のスロットリング（500ms）
5. スクロールパフォーマンス最適化（requestAnimationFrame）
6. アニメーションのwill-change最適化
7. Virtual Scrolling風の表示最適化
8. メモリリーク防止処理

削除されたファイルから高度な最適化技術をサルベージして実装完了

--- a/matching.html
+++ b/matching.html
@@ -372,6 +372,8 @@
     <script src="js/matching-filter-reset.js"></script>
     <!-- リアルタイム更新機能 -->
     <script src="js/matching-realtime-updates.js"></script>
+    <!-- パフォーマンス最適化 -->
+    <script src="js/matching-performance-optimize.js"></script>
     <!-- ユーザードロップダウンハンドラー -->
     <script src="js/user-dropdown-handler.js"></script>
     <!-- アバターサイズ強制適用 -->
