エラー修正: コンソールエラーと404エラーを解決
修正内容:
1. 404エラー修正
   - responsive-menu-simple.js を作成（responsive-menu.jsからコピー）
   - activity-event-filter-fix.js を作成

2. シンタックスエラー修正
   - service-worker-filter.js: コメントアウトの構文エラーを修正
   - console-history-logger.js: 同様の構文エラーを修正

3. matching-grid要素追加
   - matching.htmlに<div class='matching-grid'>を追加
   - マッチングカードの表示エラーを解決

4. profile-viewer.js修正
   - Supabase初期化を待つ処理を追加
   - window.supabaseをwindow.supabaseClientに統一

5. 不要なスクリプトの無効化
   - matching-init-fix.js
   - matching-complete-fix.js
   - matching-table-adapter.js
   - database-table-resolver.js

これらは既にmatching-unified.jsに統合済みのため無効化

--- a/connections.html
+++ b/connections.html
@@ -303,14 +303,11 @@
     <!-- responsive-menu-simple.jsを削除してsidebar-toggle.jsのみ使用 -->
     <script src="js/sidebar-toggle.js"></script>
     <script src="js/connections-manager-simple.js?v=2024121707"></script>
-    <!-- データベーステーブル解決ユーティリティ -->
-    <script src="js/database-table-resolver.js"></script>
-    <!-- matchingsテーブル活用アダプター -->
-    <script src="js/matching-table-adapter.js"></script>
-    <!-- マッチング初期化修正 -->
-    <script src="js/matching-init-fix.js"></script>
-    <!-- マッチング完全修正版（削除されたコードを復活） -->
-    <script src="js/matching-complete-fix.js"></script>
+    <!-- 以下は無効化（不要） -->
+    <!-- <script src="js/database-table-resolver.js"></script> -->
+    <!-- <script src="js/matching-table-adapter.js"></script> -->
+    <!-- <script src="js/matching-init-fix.js"></script> -->
+    <!-- <script src="js/matching-complete-fix.js"></script> -->
     <!-- プロフィールモーダル機能 -->
     <script src="js/members-profile-modal.js"></script>
     <script src="js/user-dropdown-handler.js"></script>
