サルベージ機能追加: マッチング・コネクションページの見逃し機能を復元
追加機能（matching-missing-features.js）:
1. コネクション承認通知システム
   - connection_request/accepted/rejected通知

2. カードアニメーション遅延
   - フェードイン効果の段階的適用

3. 高度な画像遅延読み込み
   - プレースホルダーからの切り替え
   - エラー時のフォールバック処理

4. 高度な検索機能
   - 複数条件AND/OR検索
   - ファジー検索（類似度計算）
   - レーベンシュタイン距離による曖昧検索

5. コネクション管理強化
   - 相互コネクション確認
   - 2次つながり推薦機能

6. UIフィードバック強化
   - ボタンリップルエフェクト

競合修正:
- profile-modal-priority.jsのイベント置き換えを共存型に変更
- キャプチャフェーズでの優先実行
- stopImmediatePropagation()で重複実行防止

削除されたファイルから重要機能を完全サルベージ完了

--- a/connections.html
+++ b/connections.html
@@ -303,6 +303,8 @@
     <!-- responsive-menu-simple.jsを削除してsidebar-toggle.jsのみ使用 -->
     <script src="js/sidebar-toggle.js"></script>
     <script src="js/connections-manager-simple.js?v=2024121707"></script>
+    <!-- サルベージ機能統合 -->
+    <script src="js/matching-missing-features.js"></script>
     <!-- 以下は無効化（不要） -->
     <!-- <script src="js/database-table-resolver.js"></script> -->
     <!-- <script src="js/matching-table-adapter.js"></script> -->
