--- a/matching.html
+++ b/matching.html
@@ -374,6 +374,8 @@
     <script src="js/matching-realtime-updates.js"></script>
     <!-- パフォーマンス最適化 -->
     <script src="js/matching-performance-optimize.js"></script>
+    <!-- サルベージ機能統合 -->
+    <script src="js/matching-missing-features.js"></script>
     <!-- ユーザードロップダウンハンドラー -->
     <script src="js/user-dropdown-handler.js"></script>
     <!-- アバターサイズ強制適用 -->
