コネクションページ修正: 申請中表示とプロフィールポップアップ機能を復元

--- a/connections.html
+++ b/connections.html
@@ -311,6 +311,7 @@
     <!-- <script src="js/matching-init-fix.js"></script> -->
     <!-- <script src="js/matching-complete-fix.js"></script> -->
     <!-- プロフィールモーダル機能 -->
+    <script src="js/profile-detail-modal.js"></script>
     <script src="js/members-profile-modal.js"></script>
     <script src="js/user-dropdown-handler.js"></script>
 <!-- 以下のcritical系スクリプトは無効化（重複と競合の原因） -->
