Fix remaining JS errors and remove unused booking_intents references
- Remove non-existent JS file references from book-consultation.html
- Fix navbar HTML structure to match CSS classes
- Remove google-calendar-booking.js references causing booking_intents 404 error
- Clean up dashboard.html and referral.html

Note: The duplicate filters issue appears to be from live site only, not in source code

--- a/referral.html
+++ b/referral.html
@@ -534,8 +534,7 @@ AIを活用した次世代のビジネスマッチングサービスで、経営
         }
     </script>
     <!-- TimeRex予約システム -->
-    <!-- TimeRexサイトアクセス不可のため一時的にGoogle Calendar使用 -->
-    <script src="js/google-calendar-booking.js?v=1.0"></script>
+    <!-- booking_intentsテーブル使用停止 -->
     <!-- ユーザードロップダウンハンドラー -->
     <script src="js/user-dropdown-handler.js"></script>
     <!-- シェアモーダルハンドラー -->
