--- a/dashboard.html
+++ b/dashboard.html
@@ -528,8 +528,7 @@
     <!-- グローバル閲覧履歴 -->
     <script src="js/global-viewing-history.js"></script>
     <!-- TimeRex予約システム -->
-    <!-- TimeRexサイトアクセス不可のため一時的にGoogle Calendar使用 -->
-    <script src="js/google-calendar-booking.js?v=1.0"></script>
+    <!-- booking_intentsテーブル使用停止 -->
     <!-- 通知機能はJSを無効化 -->
     <!-- <script src="js/notifications.js"></script> -->
     <!-- ユーザードロップダウンハンドラー -->
